--- a/about.html
+++ b/about.html
@@ -5,18 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About — Suraj Kushwaha</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./Style.css">
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-primary shadow-sm">
 <div class="container">
-<a class="navbar-brand fw-bold" href="Index.html">Suraj Kushwaha</a>
+<a class="navbar-brand fw-bold" href="index.html">Suraj Kushwaha</a>
 <div class="collapse navbar-collapse" id="navMenu2">
 <ul class="navbar-nav ms-auto">
-<li class="nav-item"><a href="Index.html"target="_blank" class="nav-link active">Home</a></li>
-<li class="nav-item"><a href="About.html"target="_blank" class="nav-link">About</a></li>
-<li class="nav-item"><a href="Projects.html"target="_blank" class="nav-link">Projects</a></li>
-<li class="nav-item"><a href="Contact.html" target="_blank"class="nav-link">Contact</a></li>
+<li class="nav-item"><a href="index.html"target="_blank" class="nav-link active">Home</a></li>
+<li class="nav-item"><a href="about.html"target="_blank" class="nav-link">About</a></li>
+<li class="nav-item"><a href="projects.html"target="_blank" class="nav-link">Projects</a></li>
+<li class="nav-item"><a href="contact.html" target="_blank"class="nav-link">Contact</a></li>
 </ul>
 </div>
 </div>
@@ -27,7 +27,7 @@
 <div class="container">
 <div class="row">
 <div class="col-lg-4 text-center">
-<img src="./WhatsApp Image 2025-11-26 at 8.49.37 PM.jpeg" class="img-fluid rounded shadow mb-3" style="max-width:240px">
+<img src="./profile.jpg" class="img-fluid rounded shadow mb-3" style="max-width:240px">
 <a class="btn btn-outline-primary" 
    href="https://drive.google.com/uc?export=download&id=1neTmkdM0nJxAzbfQ6IBLuQiHk4GpHJk0">
    Download Resume
@@ -67,3 +67,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
