--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Contact</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./Style.css">
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-primary shadow-sm py-3">
@@ -17,10 +17,10 @@
 
         <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a href="Index.html"target="_blank" class="nav-link active">Home</a></li>
-                <li class="nav-item"><a href="About.html"target="_blank" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="Projects.html"target="_blank" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="Contact.html" target="_blank"class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="index.html"target="_blank" class="nav-link active">Home</a></li>
+                <li class="nav-item"><a href="about.html"target="_blank" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="projects.html"target="_blank" class="nav-link">Projects</a></li>
+                <li class="nav-item"><a href="contact.html" target="_blank"class="nav-link">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -71,3 +71,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
