--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Portfolio</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -21,10 +21,10 @@
 
         <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a href="Index.html"target="_blank" class="nav-link active">Home</a></li>
-                <li class="nav-item"><a href="About.html"target="_blank" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="Projects.html"target="_blank" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="Contact.html" target="_blank"class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="index.html"target="_blank" class="nav-link active">Home</a></li>
+                <li class="nav-item"><a href="about.html"target="_blank" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="projects.html"target="_blank" class="nav-link">Projects</a></li>
+                <li class="nav-item"><a href="contact.html" target="_blank"class="nav-link">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -34,7 +34,7 @@
 <!-- HERO SECTION -->
 <header class="hero">
     <div class="container text-center">
-        <img src="./WhatsApp Image 2025-11-26 at 8.49.37 PM.jpeg" alt="profile" 
+        <img src="./profile.jpg" alt="profile" 
              class="img-fluid rounded-circle mb-4 shadow" style="max-width:180px">
 
         <h1>Hello, I'm <span class="fw-bold">Suraj Kushwaha</span></h1>
@@ -111,3 +111,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
