--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Portfolio</title>
 
-    <link rel="stylesheet" href="./Style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -19,10 +19,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a href="Index.html"target="_blank" class="nav-link active">Home</a></li>
-                <li class="nav-item"><a href="About.html"target="_blank" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="Projects.html"target="_blank" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="Contact.html" target="_blank"class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="index.html"target="_blank" class="nav-link active">Home</a></li>
+                <li class="nav-item"><a href="about.html"target="_blank" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="projects.html"target="_blank" class="nav-link">Projects</a></li>
+                <li class="nav-item"><a href="contact.html" target="_blank"class="nav-link">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -104,3 +104,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
