--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 <p>I am a B.C.A graduate (2024) with a strong passion for Java development. I am currently looking for opportunities as a Java Developer where I can apply my programming skills, problem-solving abilities, and knowledge of core Java and related technologies to contribute to real-world projects and grow as a professional.</p>
 <h5 class="mt-4">Education & Interests</h5>
 <ul>
-<li>B.C.A — (Year) — Indian Institute Of Business Management,(Patna).</li>
+<li>B.C.A — (2024) — Indian Institute Of Business Management,(Patna).</li>
 <li>Looking for the oportunity to showcase my skills</li>
 <li>Interests: Web development, problem solving, system design</li>
 </ul>
@@ -67,4 +67,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
