--- a/index.html
+++ b/index.html
@@ -147,20 +147,35 @@
         <div class="row gy-4">
 
             <!-- Project Card 1 -->
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Online Food Ordering</h5>
-                        <p class="card-text small text-muted">Java, Spring MVC, Spring JPA, PostgreSQL</p>
-                        <p class="card-text">A full-stack web application for ordering food with admin and user panels.</p>
-                        <a href="https://github.com/yourusername/food-delivery" target="_blank" class="btn btn-outline-primary btn-sm">View on GitHub</a>
-                    </div>
-                </div>
+    <img src="./assets/projects/Online_FoodOedering.webp"
+         class="card-img-top"
+         alt="Online Food Ordering Project">
+
+    <div class="card-body">
+        <h5 class="card-title">Online Food Ordering</h5>
+        <p class="card-text small text-muted">
+            Java, Spring Boot, JPA, PostgreSQL
+        </p>
+        <p class="card-text">
+            Full-stack web application for food ordering with admin and user roles.
+        </p>
+
+        <a href="https://github.com/surajmaurya6688/OnlineFoodOrdering"
+           target="_blank"
+           class="btn btn-outline-primary btn-sm">
+           View on GitHub
+        </a>
+    </div>
+</div>
+
             </div>
 
             <!-- Project Card 2 -->
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
+                    <img src="./hospital.webp"class="card-img-top" alt="Online Food Ordering Project">
                     <div class="card-body">
                         <h5 class="card-title">Student Management System</h5>
                         <p class="card-text small text-muted">Java, JDBC, Oracle, Bootstrap</p>
@@ -169,7 +184,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title">To_Do List</h5>
@@ -180,7 +195,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title">Calculator Web</h5>
@@ -191,7 +206,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title">Digital Clock Web</h5>
