--- a/index.html
+++ b/index.html
@@ -175,11 +175,23 @@
             <!-- Project Card 2 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="./hospital.webp"class="card-img-top" alt="Online Food Ordering Project">
+                    <img src="./student-management-system.jpg"class="card-img-top" alt="Online Food Ordering Project">
                     <div class="card-body">
                         <h5 class="card-title">Student Management System</h5>
                         <p class="card-text small text-muted">Java, JDBC, Oracle, Bootstrap</p>
                         <p class="card-text">A CRUD application to manage student records and generate reports.</p>
+                        <a href="https://github.com/yourusername/student-management" target="_blank" class="btn btn-outline-primary btn-sm">View on GitHub</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="./hospital.webp"class="card-img-top" alt="hospital management system">
+                    <div class="card-body">
+                        <h5 class="card-title">Hospital management system</h5>
+                        <p class="card-text small text-muted">Java, spring boot, spring security, PostgreSQL,Hibernate</p>
+                        <p class="card-text">Built a comprehensive full-stack hospital management application with patient registration, appointment
+scheduling, medicine inventory, and treatment tracking modules.</p>
                         <a href="https://github.com/yourusername/student-management" target="_blank" class="btn btn-outline-primary btn-sm">View on GitHub</a>
                     </div>
                 </div>
