--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <!-- Project Card 1 -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
-    <img src="./assets/projects/Online_FoodOedering.webp"
+    <img src="./foodordering.jpg"
          class="card-img-top"
          alt="Online Food Ordering Project">
 
@@ -302,3 +302,4 @@ scheduling, medicine inventory, and treatment tracking modules.</p>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
